Fix validation table design

--- a/src/AppBundle/Resources/public/less/style.less
+++ b/src/AppBundle/Resources/public/less/style.less
@@ -17,3 +17,12 @@
     cursor: inherit;
     display: block;
 }
+
+.big-checkboxes input[type=checkbox]
+{
+    -ms-transform: scale(1.6); /* IE */
+    -moz-transform: scale(1.6); /* FF */
+    -webkit-transform: scale(1.6); /* Safari and Chrome */
+    -o-transform: scale(1.6); /* Opera */
+    padding: 10px;
+}
