--- a/src/AppBundle/Resources/views/Admin/index.html.twig
+++ b/src/AppBundle/Resources/views/Admin/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block content %}
-    <div class="row">
+    <div class="row" xmlns="http://www.w3.org/1999/html">
         <div class="col-lg-12">
             <h1 class="page-header">{{ 'admin.index.title'|trans }}</h1>
         </div>
@@ -10,7 +10,7 @@
         <div class="col-lg-12">
             {% for flashMessage in app.session.flashbag.get('success') %}
                 <div class="alert alert-success alert-dismissable">
-                    {{ flashMessage }}
+                    {{ flashMessage|raw }}
                     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
                 </div>
             {% endfor %}
@@ -25,15 +25,16 @@
                 <div class="panel-body">
                     {% if form_user_validation_collection.users is not empty %}
                         {{ form_start(form_user_validation_collection) }}
-                        <div class="dataTable_wrapper">
-                            <table class="table table-bordered table-striped table-primary list-table" id="user-validation-table">
+                        <div class="dataTable_wrapper big-checkboxes">
+                            <table class="table table-bordered table-striped table-primary list-table"
+                                   id="user-validation-table">
                                 <thead>
                                     <tr>
                                         <th>{{ 'admin.index.user_validation.field.firstname'|trans }}</th>
                                         <th>{{ 'admin.index.user_validation.field.lastname'|trans }}</th>
                                         <th>{{ 'admin.index.user_validation.field.profile_type'|trans }}</th>
                                         <th>{{ 'admin.index.user_validation.field.offshoot_of_origin'|trans }}</th>
-                                        <th class="no-sort"></th>
+                                        <th class="no-sort">{{ 'admin.index.user_validation.field.select'|trans }}</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -46,14 +47,24 @@
                                                     {{ user.vars.value.offshootOfOrigin.name }}
                                                 {% endif %}
                                             </td>
-                                            <td>{{ form_widget(user.validated) }}</td>
+                                            <td class="big-checkbox text-center">{{ form_widget(user.validated) }}</td>
                                         </tr>
                                     {% endfor %}
                                 </tbody>
                             </table>
                         </div>
-                        <input class="btn btn-lg btn-default btn-success btn-block" type="submit"
-                               value="{{ 'admin.index.user_validation.submit'|trans }}"/>
+                        <div class="text-center">
+                            <div class="btn-group btn-group-lg" role="group" aria-label="...">
+                                <div class="btn-group" role="group">
+                                    <input class="btn btn-lg btn-default" type="submit" name="delete"
+                                           value="{{ 'admin.index.user_validation.delete'|trans }}"/>
+                                </div>
+                                <div class="btn-group" role="group">
+                                    <input class="btn btn-lg btn-success" type="submit" name="validate"
+                                           value="{{ 'admin.index.user_validation.validate'|trans }}"/>
+                                </div>
+                            </div>
+                        </div>
                         {{ form_end(form_user_validation_collection) }}
                     {% else %}
                         <div class="alert alert-warning">
@@ -62,26 +73,28 @@
                     {% endif %}
                 </div>
             </div>
-        </div>
-        <!-- /.col-lg-12 -->
+            <!-- /.col-lg-12 -->
 
-        <div class="col-lg-6">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    {{ 'admin.index.group.create.title'|trans }}
-                </div>
-                <div class="panel-body">
-                    {{ form_start(form_group) }}
-                    {{ form_row(form_group.name) }}
-                    {{ form_row(form_group.description) }}
-                    {{ form_row(form_group.offshoot) }}
-                    <input class="btn btn-lg btn-default btn-success btn-block" type="submit"
-                           value="{{ 'admin.index.group.create.submit'|trans }}"/>
-                    {{ form_end(form_group) }}
+            <div class="col-lg-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        {{ 'admin.index.group.create.title'|trans }}
+                    </div>
+                    <div class="panel-body">
+                        {{ form_start(form_group) }}
+                        {{ form_row(form_group.name) }}
+                        {{ form_row(form_group.description) }}
+                        {{ form_row(form_group.offshoot) }}
+                        <input class="btn btn-lg btn-default btn-success btn-block" type="submit"
+                               value="{{ 'admin.index.group.create.submit'|trans }}"/>
+                        {{ form_end(form_group) }}
+                    </div>
                 </div>
             </div>
+            <!-- /.col-lg-6 -->
+
         </div>
-        <!-- /.col-lg-6 -->
+        <!-- /.col-lg-12 -->
 
     </div>
     <!-- /.row -->
