--- a/src/UserBundle/Resources/views/layout.html.twig
+++ b/src/UserBundle/Resources/views/layout.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}{{ 'layout.login'|trans({}, 'FOSUserBundle') }}{% endblock %}
 
-{% block body_attributes %}style="background: url({{ asset('images/background.jpg') }}) no-repeat fixed"{% endblock %}
+{% block body_attributes %}class="cover-picture"{% endblock %}
 
 {% block body %}
     <div class="container">
