Work on datepickers

--- a/src/AppBundle/Resources/views/Profile/edit.html.twig
+++ b/src/AppBundle/Resources/views/Profile/edit.html.twig
@@ -162,23 +162,23 @@
                             </thead>
                             <tbody class="collection_holder"
                                    data-prototype="
-                               {% filter escape %}
-                                 {{ include('AppBundle:Profile:Prototype/cheerup_position.html.twig', { 'form': form_cheerup_positions.cheerupPositions.vars.prototype }) }}
-                             {% endfilter %}">
+                            {% filter escape %}
+                                {{ include('AppBundle:Profile:Prototype/cheerup_position.html.twig', { 'form': form_cheerup_positions.cheerupPositions.vars.prototype }) }}
+                            {% endfilter %}">
                                 {% if form_cheerup_positions.cheerupPositions is not empty %}
 
-                                {% for position in form_cheerup_positions.cheerupPositions %}
-                                    <tr>
-                                        <td>{{ form_row(position.title) }}</td>
-                                        <td>{{ form_row(position.description) }}</td>
-                                        <td>
-                                            <div class="input-group" id="cheerup-position-datepicker">
-                                                {{ form_row(position.startDate, {'attr': {'class': 'range_input'}}) }}
-                                                {{ form_row(position.endDate, {'attr': {'class': 'range_input'}}) }}
-                                            </div>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
+                                    {% for position in form_cheerup_positions.cheerupPositions %}
+                                        <tr>
+                                            <td>{{ form_row(position.title) }}</td>
+                                            <td>{{ form_row(position.description) }}</td>
+                                            <td>
+                                                <div class="input-group" class="cheerup-position-datepicker">
+                                                    {{ form_row(position.startDate, {'attr': {'class': 'range_input'}}) }}
+                                                    {{ form_row(position.endDate, {'attr': {'class': 'range_input'}}) }}
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
                                 {% else %}
                                     <tr class="cheerup-position-empty-table-message">
                                         <td colspan="3">
@@ -190,8 +190,8 @@
                                 {% endif %}
                             </tbody>
                         </table>
-                        <button class="add_item btn btn-success">Add</button>
                         {{ form_end(form_cheerup_positions) }}
+                        <button class="add_item btn btn-success">Add</button>
                     </div>
                 </div>
             </div>
