--- a/src/AppBundle/Resources/views/navbar.html.twig
+++ b/src/AppBundle/Resources/views/navbar.html.twig
@@ -6,7 +6,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">{{ 'home.brand_name'|trans }}</a>
+        <a class="navbar-brand" href="{{ path('cheerup_profile_index') }}">{{ 'home.brand_name'|trans }}</a>
     </div>
     <!-- /.navbar-header -->
 
