--- a/src/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -1,4 +1,4 @@
-<form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
+{{ form_start(form) }}
     {#{{ form_widget(form) }}#}
     {{ form_row(form.email) }}
     {{ form_row(form.plainPassword) }}
@@ -9,5 +9,4 @@
     {{ form_row(form.firstname) }}
     {{ form_row(form.lastname) }}
     <input id="_submit" name="_submit" class="btn btn-lg btn-default btn-success btn-block" type="submit" value="{{ 'registration.submit'|trans({}, 'FOSUserBundle') }}" />
-    {{ form_rest(form) }}
-</form>
+{{ form_end(form) }}
