--- a/src/AppBundle/Resources/views/Components/profile_picture.html.twig
+++ b/src/AppBundle/Resources/views/Components/profile_picture.html.twig
@@ -1,13 +1,9 @@
-{{ dump(webPath) }}
 {% if webPath is not null %}
-  {% set picture_url = user.userProfile.picture.webPath %}
+  {% set picture_url = asset(user.userProfile.picture.webPath) %}
 {% else %}
-  {{ dump(webPath) }}
   {% set picture_url = asset('images/default_profile_picture.jpg') %}
-  {{ dump(picture_url) }}
 {% endif %}
-{#<img src="{{ picture_url|imagine_filter('profile_thumbnail') }}"#}
-<img src="{{ picture_url }}"
+<img src="{{ picture_url|imagine_filter('profile_thumbnail') }}"
      alt="Profile picture thumbnail"
      class="img-circle"
      style="padding: 15px"
